--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
-  background-color: #4b4b4b;
+  background-color: #1e1e2e;
 }
 
 .expense-item__description {
@@ -18,21 +18,21 @@
 }
 
 .expense-item h2 {
-  color: #3a3a3a;
+  color: #cdd6f4;
   font-size: 1rem;
   flex: 1;
   margin: 0 1rem;
-  color: white;
 }
 
 .expense-item__price {
   font-size: 1rem;
   font-weight: bold;
-  color: white;
-  background-color: #40005d;
-  border: 1px solid white;
+  color: #f38ba8;
+  background-color: #181825;
   padding: 0.5rem;
   border-radius: 12px;
+  box-shadow: 2px 3px 1px black;
+
 }
 
 @media (min-width: 580px) {
