--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,8 +1,9 @@
 .expenses {
     padding: 1rem;
-    background-color: rgb(31, 31, 31);
+    background-color: #11111b;
     margin: 2rem auto;
     width: 50rem;
     max-width: 95%;
+    box-shadow: 2px 3px 3px black;
 
 }
